Fix overflow problem

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -6,7 +6,6 @@
 }
 
 .post-container {
-  overflow: hidden;
   width: 100%;
   height: 100%;
   display: flex;
